# lib-camera

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
cmake/: dependencies.cmake
examples/: CMakeLists.txt
examples/rpi5csi/: CMakeLists.txt
examples/rpi5csi/src/: main.cpp
inc/camera/: factory.hpp  helpers.hpp
inc/camera/interfaces/: camera.hpp  usb.hpp
inc/camera/interfaces/rpi5/: csi.hpp
src/: usb.cpp
src/rpi5/: csi.cpp
